Function of remove participant from team was added